fix: Fix target.id not showing when the img is clicked instead of btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,13 @@ button {
     background: radial-gradient(at center, var(--rock-clr-start), var(--rock-clr-end));
 }
 
-.game {
+/* dirty implementation but idc */
+.game.img-paper#paper,
+.game.img-scissors#scissors,
+.game.img-rock#rock {
+    background: white;
     width: 10rem;
     height: 10rem;
     padding: 50px;
     border-radius: 50%;
-    background: white;
 }
